applications/public/0-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: public
    labels:
        name: public
