applications/public/samba.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: public
    name: samba
    labels:
        app: samba
spec:
    replicas: 1
    selector:
        matchLabels:
            app: samba
    template:
        metadata:
            labels:
                app: samba
        spec:
            nodeSelector:
                kubernetes.io/arch: amd64
            volumes:
                - name: docker-entrypoint-d
                  emptyDir: {}
                - name: etc-samba
                  emptyDir: {}
                - name: shared
                  persistentVolumeClaim:
                      claimName: public
                      readOnly: false
            containers:
                - name: samba
                  image: sixeyed/samba:latest
                  imagePullPolicy: Always
                  volumeMounts:
                      - name: docker-entrypoint-d
                        mountPath: /docker-entrypoint.d
                      - name: shared
                        subPath: public/srv/public
                        mountPath: /srv/public
                  ports:
                      - containerPort: 139
                        protocol: TCP
                      - containerPort: 445
                        protocol: TCP
                      - containerPort: 137
                        protocol: UDP
                      - containerPort: 138
                        protocol: UDP
                  resources: {}
                  command:
                      [
                          "bash",
                          "-c",
                          "set -xm; samba.sh -p -s 'Scanner;/srv/public;yes;no;yes;all' & sleep 1 && sed -i 's/force group = users/force group = smbuser/g' /etc/samba/smb.conf && pkill -9 -f smb && pkill -9 -f samba && samba.sh -p -s 'Scanner;/srv/public;yes;no;yes;all'",
                      ]
---
apiVersion: v1
kind: Service
metadata:
    name: samba
    namespace: public
    labels:
        monitoring: "true"
spec:
    selector:
        app: samba
    ports:
        - name: samba-1
          protocol: TCP
          port: 139
          targetPort: 139
        - name: samba-2
          protocol: TCP
          port: 445
          targetPort: 445
        - name: samba-3
          protocol: UDP
          port: 137
          targetPort: 137
        - name: samba-4
          protocol: UDP
          port: 138
          targetPort: 138
    type: LoadBalancer
